validator_derive/tests/compile-fail/schema/missing_function.stderr
error: proc-macro derive panicked
 --> $DIR/missing_function.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = help: message: Invalid schema level validation: `function` is required
